# socrates-austria-2023

./: Dockerfile  README.md  build.sh  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
nodejs/demo/: io.txt  package.json  tsconfig.json
nodejs/demo/__tests__/: playground-serde-wasm-bindgen.test.ts  playground-wasm-bindgen.test.ts  playground-wasm-tsify.test.ts
nodejs/demo/src/: io.ts
nodejs/demo/wasm/: playground_serde_wasm_bindgen.d.ts  playground_serde_wasm_bindgen.js  playground_serde_wasm_bindgen_bg.wasm  playground_serde_wasm_bindgen_bg.wasm.d.ts  playground_wasm_bindgen.d.ts  playground_wasm_bindgen.js  playground_wasm_bindgen_bg.wasm  playground_wasm_bindgen_bg.wasm.d.ts  playground_wasm_io.d.ts  playground_wasm_io.js  playground_wasm_io_bg.wasm  playground_wasm_io_bg.wasm.d.ts  playground_wasm_tsify.d.ts  playground_wasm_tsify.js  playground_wasm_tsify_bg.wasm  playground_wasm_tsify_bg.wasm.d.ts
nodejs/scripts/: package.json
rust/: Cargo.toml  rust-toolchain.toml
rust/playground-serde-wasm-bindgen/: Cargo.toml
rust/playground-wasm-bindgen/: Cargo.toml
rust/playground-wasm-bindgen/src/functions/: string.rs  unsupported.rs
rust/playground-wasm-io/: Cargo.toml
rust/playground-wasm-io/src/: lib.rs
rust/playground-wasm-tsify/: Cargo.toml
rust/playground-wasm-tsify/src/: types.rs
rust/playground-wasm-tsify/src/functions/: string.rs
rust/playground-wasm-tsify/src/types/: vec.rs
