[package]
name = "playground-wasm-io"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Schiabel <alberto.schiabel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# build a C-style shared library that can be dynamically loaded by Node.js
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
wasm-bindgen-futures = { version = "0.4" }
js-sys = { version = "0.3" }
